# iatros-decoder

./: README.md  configure
iatros/: .history_dmartinalbo
iatros/offline/: .history_dmartinalbo  CMakeLists.txt  CPackConfig.cmake  config.h.cmake  devel.notes  doxyfile.cmake  readme  version.h.cmake
iatros/offline/cmake.modules/: CommonCompileOptions.cmake  LibTools.cmake  Package.cmake  python.cmake
iatros/offline/cmake.modules/.svn/: wc.db
iatros/offline/scripts/: convert_atros_config.py
iatros/offline/src/: .history_dmartinalbo  CMakeLists.txt  gmm.c  grammar-tool.c  nothing.c  recog-wordlist.c  recog.c
iatros/offline/test/: CMakeLists.txt  test.sh
prhlt/: .history_dmartinalbo  CMakeLists.txt  CPack.cmake  README  config.h.cmake  doxyfile.cmake  version.h.cmake
prhlt/cmake.modules/: FindGTK2.cmake  FindGit.cmake  FindSRILM.cmake
prhlt/cmake.modules/.svn/: wc.db
prhlt/src/: CMakeLists.txt  args-flex.c  args-flex.h  args-parser.y  args-scanner.l  args.c  args.h  args_friend.h  constants.h  errno.h.cmake  extended_vocab.c  extended_vocab.h  gzip.c  gzip.h  hash.c  hash.h  monitor.c  monitor.h  segfaulter.c  sigsegv.c  test_args.c  test_monitor.c  trace.c  trace.h  utils.c  utils.h  vector.c  vector.h  vocab.c  vocab.h
